# FastAPI-starter

./: .commitlintrc.yaml  .gitignore  package-lock.json  package.json  pyproject.toml
.githooks/: commit-msg
app/: config.py  database.py  dependencies.py  main.py
app/exceptions/: exceptions.py  handlers.py
app/models/: user.py
app/repositories/: user.py
app/routers/: user.py
app/schemas/: user.py
app/services/: user.py
bruno/Template/: opencollection.yml
bruno/Template/Users/: Get User.yml  Register User.yml
bruno/Template/environments/: local.yml
